# MPECSSCODEPAPER

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tps.txt
benchmarks/: README.md
docs/: WORKFLOW_DIAGRAMS.md  diagram_a_overview.mmd  diagram_b_phase12.mmd  diagram_c_phase3.mmd  mpecss_algorithm_workflow.mmd
kaggle_setup/: KAGGLE_SETUP_GUIDE.md  MPECSS_Kaggle_Benchmark.ipynb  MPECSS_Kaggle_MPECLib.ipynb  MPECSS_Kaggle_MacMPEC.ipynb  MPECSS_Kaggle_MacMPEC_Ablation.ipynb  MPECSS_Kaggle_MacMPEC_Ablation_FixedPhaseII.ipynb  MPECSS_Kaggle_MacMPEC_Ablation_NoPhaseI.ipynb  MPECSS_Kaggle_MacMPEC_ParamSensitivity.ipynb  MPECSS_Kaggle_MacMPEC_ParamSensitivity_kappa_0p3.ipynb  MPECSS_Kaggle_MacMPEC_ParamSensitivity_kappa_0p5.ipynb  MPECSS_Kaggle_MacMPEC_ParamSensitivity_kappa_0p8.ipynb  MPECSS_Kaggle_MacMPEC_ParamSensitivity_t0_0p1.ipynb  MPECSS_Kaggle_MacMPEC_ParamSensitivity_t0_1.ipynb  MPECSS_Kaggle_MacMPEC_ParamSensitivity_t0_10.ipynb  MPECSS_Kaggle_MacMPEC_SeedRobustness.ipynb  MPECSS_Kaggle_MacMPEC_SeedRobustness_Seed11.ipynb  MPECSS_Kaggle_MacMPEC_SeedRobustness_Seed123.ipynb  MPECSS_Kaggle_MacMPEC_SeedRobustness_Seed42.ipynb  MPECSS_Kaggle_NosBench_Group1.ipynb  MPECSS_Kaggle_NosBench_Group2.ipynb  MPECSS_Kaggle_NosBench_Group3.ipynb  MPECSS_Kaggle_NosBench_Group4.ipynb  MPECSS_Kaggle_NosBench_Group5.ipynb  MPECSS_Kaggle_NosBench_Group6.ipynb  PARALLEL_EXECUTION_GUIDE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  START_HERE.md  generate_notebooks.py  repair_kaggle_notebooks.py  resumable_benchmark.py  study_runner.py
mpecss/: __init__.py
paper/: booktabs.sty  generate_figures.py  macmpec_outcomes.eps  main.tex  mpeclib_outcomes.eps  nosbench_outcomes.eps  section_algorithm.tex  section_conclusions.tex  section_convergence.tex  section_introduction.tex  section_numerical.tex  section_preliminaries.tex  section_references.tex
scripts/: __init__.py  preflight_checks.py  run_all_benchmarks.py  (+3 more)
(+281 files in other folders)
